[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/BlueprintEditor/Panels/Blueprint Editor.gd" type="Script" id=1]
[ext_resource path="res://GUI/BlueprintEditor/Panels/EventSettings.gd" type="Script" id=2]
[ext_resource path="res://GUI/BlueprintEditor/Panels/LibraryPanel.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.141176 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0.376471 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[node name="Blueprint Editor" type="WindowDialog"]
margin_right = 355.0
margin_bottom = 301.0
rect_min_size = Vector2( 300, 250 )
window_title = "Blueprint Editor"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 335.0
margin_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2"]
margin_right = 335.0
margin_bottom = 72.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 109.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="TextEdit" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Planet Name"

[node name="ShowClouds" type="CheckBox" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 109.0
margin_bottom = 48.0
text = "Show Clouds"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 109.0
margin_bottom = 72.0
theme = SubResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 113.0
margin_right = 222.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddFill" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 109.0
margin_bottom = 20.0
text = "Add Fill"

[node name="AddNoise" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 109.0
margin_bottom = 44.0
text = "Add Noise"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 226.0
margin_right = 335.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Save" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
margin_right = 109.0
margin_bottom = 20.0
text = "Save"

[node name="Load" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3"]
margin_top = 24.0
margin_right = 109.0
margin_bottom = 44.0
text = "Load"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 335.0
margin_bottom = 283.0
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_bottom = 207.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventSettings" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.000590532
anchor_right = 1.36968
anchor_bottom = 0.922596
margin_left = 3.0
margin_right = 3.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EventSettings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 14.0
text = "Cascading List"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="EventSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 28.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/bg = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EventSettings/ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 121.236
margin_bottom = 243.524
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueprintLibrary" type="Panel" parent="."]
anchor_left = -0.0417042
anchor_top = 0.089701
anchor_right = -0.00226763
anchor_bottom = 0.843854
margin_left = -109.195
margin_right = 1.80501
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BlueprintLibrary"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.5
margin_top = 3.0
margin_right = 21.5
margin_bottom = 14.0
text = "Library"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BlueprintLibrary"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 19.95
margin_right = -4.0
margin_bottom = -4.0
custom_styles/bg = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BlueprintLibrary/ScrollContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 115.0
margin_bottom = 201.05
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/ShowClouds" to="." method="_on_ShowClouds_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/AddFill" to="." method="_on_AddFill_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/AddNoise" to="." method="_on_AddNoise_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer3/Load" to="." method="_on_Load_pressed"]
